--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.epsi.java.ee</groupId>
-	<artifactId>PhotoGallery</artifactId>
+	<artifactId>javaeefootball</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>PhotoGallery</name>
 
 	<properties>
 		<java.source.version>1.8</java.source.version>
@@ -83,4 +82,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	<name>javaeefootball</name>
 </project>
