update championnat equipe

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,4 +22,37 @@
     <servlet-name>SignUp</servlet-name>
     <url-pattern>/signUp</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>Test</servlet-name>
+    <servlet-class>org.epsi.java.ee.football.controller.Test</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Test</servlet-name>
+    <url-pattern>/test</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>Championnat</servlet-name>
+    <servlet-class>org.epsi.java.ee.football.controller.Championnat</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Championnat</servlet-name>
+    <url-pattern>/championnat</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>Equipe</servlet-name>
+    <servlet-class>org.epsi.java.ee.football.controller.Equipe</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Equipe</servlet-name>
+    <url-pattern>/equipe</url-pattern>
+  </servlet-mapping>
+  
+  
+
 </web-app>
