mise à jour de la class et du controller championnat

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
   
   <servlet>
     <servlet-name>Championnat</servlet-name>
-    <servlet-class>org.epsi.java.ee.football.controller.Championnat</servlet-class>
+    <servlet-class>org.epsi.java.ee.football.controller.ControllerChampionnat</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
